added more init data for users + shifts, plus edited getUsers endpoint